# CGCourse-HA1

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  camera.cpp  camera.hpp  image.cpp  image.hpp  light_source.cpp  light_source.hpp  main.cpp  model.cpp  model.hpp  obj_model.cpp  opengl_shader.cpp  opengl_shader.h  player.cpp  player.hpp  rectangular_model.cpp  rectangular_model.hpp  render_target.cpp  render_target.hpp  shadow.cpp  shadow.hpp  terrain.cpp  terrain.hpp  toric_terrain.cpp  toric_terrain.hpp
assets/: simple-shader.fs  simple-shader.vs
assets/models/car/: car.mtl
assets/models/chek/: chek.mtl
assets/models/cube/: cube.mtl
assets/models/penguin/: penguin.mtl
assets/models/sphere/: sphere.mtl
assets/models/teapot/: teapot.mtl
assets/shaders/: debug-quad.fs.glsl  debug-quad.vs.glsl  depth.vs.glsl  model.fs  model.vs  simple-shader.fs  simple-shader.vs  skybox.fragment.shader  skybox.vertex.shader  terrain.fs.glsl  terrain.vs.glsl
includes/: camera.hpp
